# context-saver-mcp

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  SKILL.md  TEST_PLAN.md  TRUSTED_CONTEXT.md  pyproject.toml  setup.py
examples/: sample_archive_pack.md  sample_codex_prompt.md  sample_context_pack.md  sample_extract_pack.md  sample_review_pack.md  sample_search_pack.md
scripts/: install-codex-skill.sh
skills/context-saver-mcp/: SKILL.md  runtime.conf.example
skills/context-saver-mcp/agents/: openai.yaml
src/context_saver/: __init__.py  anysearch_client.py  archive_extract.py  archive_scan.py  browser_search.py  cli.py  codex_pack.py  config.py  cost.py  deepseek_client.py  fetcher.py  file_extract.py  file_types.py  mcp_server.py  models.py  project_scan.py  review.py  router.py  search.py  summarizer.py  token_utils.py
tests/: test_anysearch_client.py  test_archive_extract.py  test_cli_config.py  test_deepseek_client.py  test_file_types.py  test_mcp_server.py  test_pack_format.py  test_project_scan.py  test_review_mode.py  test_router.py  test_token_utils.py
