[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-saver-mcp"
version = "0.1.0"
description = "Local context compression, file extraction, archive reading and review helper for coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Context Saver MCP Contributors" }]
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pydantic>=2",
  "python-dotenv>=1",
  "rich>=13",
  "mcp>=1.0",
  "pypdf>=4",
  "python-docx>=1",
  "tiktoken>=0.7",
  "py7zr>=0.21",
  "rarfile>=4",
  "pytest>=8",
]

[project.scripts]
csp = "context_saver.cli:app"
context-saver-mcp = "context_saver.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
